revert entity context layer

--- a/generators/react-native/templates/app/modules/entities/entity-edit-screen.js.ejs
+++ b/generators/react-native/templates/app/modules/entities/entity-edit-screen.js.ejs
@@ -1,13 +1,13 @@
 import React, { createRef } from 'react';
 import { ActivityIndicator, Text, View } from 'react-native';
 import { connect } from 'react-redux'
-<%_ if (entity.validation) { _%>
+<%_ if (validation) { _%>
 import * as Yup from 'yup';
 <%_ } _%>
 
-import <%= entity.entityNameCapitalized %>Actions from './<%= entity.entityFileName %>.reducer'
+import <%= entityNameCapitalized %>Actions from './<%= entityFileName %>.reducer'
 <%_ /* differentRelationships.filter(relation => relation.ownerSide).filter(relation => relation.otherEntityName !== camelCaseName).forEach((relation) => { */ _%>
-<%_ uniqueOwnerSideRelationships.filter(relation => relation.otherEntityName !== entity.entityInstance).forEach((relation) => { _%>
+<%_ uniqueOwnerSideRelationships.filter(relation => relation.otherEntityName !== entityInstance).forEach((relation) => { _%>
 <%_ if (relation.otherEntityName === 'user') { _%>
 import UserActions from '../../../shared/reducers/user.reducer'
 <%_ } else { _%>
@@ -19,12 +19,12 @@ import FormButton from '../../../shared/components/form/jhi-form-button';
 import FormField from '../../../shared/components/form/jhi-form-field';
 import Form from '../../../shared/components/form/jhi-form';
 import { useDidUpdateEffect } from '../../../shared/util/use-did-update-effect';
-import styles from './<%= entity.entityFileName %>-styles'
+import styles from './<%= entityFileName %>-styles'
 
-<%_ if (entity.validation) { // start of validation if statement _%>
+<%_ if (validation) { // start of validation if statement _%>
 // set up validation schema for the form
 const validationSchema = Yup.object().shape({
-  <%_ entity.fields.filter(field => !field.id).forEach((field) => { // start of entity.fields loop
+  <%_ fields.filter(field => !field.id).forEach((field) => { // start of fields loop
   if (field.fieldValidate) {  // start of fieldValidate if statement_%>
   <%= field.fieldName %>: Yup.<%= getFieldValidateType(field.fieldType) %>()
     <%_field.fieldValidateRules.forEach((rule, index) => { // start of fieldValidateRules loop _%>
@@ -44,8 +44,8 @@ const validationSchema = Yup.object().shape({
     <%_ }) // end of fieldValidateRules loop _%>
     ,
   <%_ } // end of fieldValidate if statement _%>
-  <%_ }) // end of entity.fields loop _%>
-  <%_ entity.relationships.filter(relation => relation.ownerSide).forEach((relation) => { // start of relationships loop
+  <%_ }) // end of fields loop _%>
+  <%_ relationships.filter(relation => relation.ownerSide).forEach((relation) => { // start of relationships loop
   if (relation.relationshipRequired) {  // start of relationshipRequired if statement_%>
   <%= relation.relationshipName %>: Yup.mixed().required(),
   <%_ } // end of relationshipValidate if statement _%>
@@ -53,7 +53,7 @@ const validationSchema = Yup.object().shape({
 });
 <%_ } // end of validation if statement _%>
 
-<%_ entity.fields.filter(field => !field.id).forEach((field) => {
+<%_ fields.filter(field => !field.id).forEach((field) => {
   if (field.fieldIsEnum) { _%>
 const <%= field.fieldType %> = [
 <%_
@@ -69,12 +69,12 @@ _%>
 <%_ } // end of if statement
 }) // end of field loop _%>
 
-function <%= entity.entityNameCapitalized %>EditScreen(props) {
+function <%= entityNameCapitalized %>EditScreen(props) {
   const {
-    get<%= entity.entityNameCapitalized %>,
-    update<%= entity.entityNameCapitalized %>,
+    get<%= entityNameCapitalized %>,
+    update<%= entityNameCapitalized %>,
     route,
-    <%= entity.entityInstance %>,
+    <%= entityInstance %>,
     fetching,
     updating,
     errorUpdating,
@@ -94,19 +94,19 @@ function <%= entity.entityNameCapitalized %>EditScreen(props) {
 
   React.useEffect(() => {
     if (!isNewEntity) {
-      get<%= entity.entityNameCapitalized %>(route.params.entityId);
+      get<%= entityNameCapitalized %>(route.params.entityId);
     } else {
       reset();
     }
-  }, [isNewEntity, get<%= entity.entityNameCapitalized %>, route, reset]);
+  }, [isNewEntity, get<%= entityNameCapitalized %>, route, reset]);
 
   React.useEffect(() => {
     if (isNewEntity) {
       setFormValue(entityToFormValue({}));
     } else if (!fetching) {
-      setFormValue(entityToFormValue(<%= entity.entityInstance %>));
+      setFormValue(entityToFormValue(<%= entityInstance %>));
     }
-  }, [<%= entity.entityInstance %>, fetching, isNewEntity]);
+  }, [<%= entityInstance %>, fetching, isNewEntity]);
 
   // fetch related entities
   React.useEffect(() => {
@@ -125,13 +125,13 @@ function <%= entity.entityNameCapitalized %>EditScreen(props) {
         setError(errorUpdating && errorUpdating.detail ? errorUpdating.detail : 'Something went wrong updating the entity');
       } else if (updateSuccess) {
         setError('');
-        isNewEntity || !navigation.canGoBack() ? navigation.replace('<%= entity.entityNameCapitalized %>Detail', { entityId: <%= entity.entityInstance %>?.id }) : navigation.pop();
+        isNewEntity || !navigation.canGoBack() ? navigation.replace('<%= entityNameCapitalized %>Detail', { entityId: <%= entityInstance %>?.id }) : navigation.pop();
       }
     }
   }, [updateSuccess, errorUpdating, navigation]);
 
 
-const onSubmit = (data) => update<%= entity.entityNameCapitalized %>(formValueToEntity(data));
+const onSubmit = (data) => update<%= entityNameCapitalized %>(formValueToEntity(data));
 
   if (fetching) {
     return (
@@ -142,13 +142,13 @@ const onSubmit = (data) => update<%= entity.entityNameCapitalized %>(formValueTo
   }
 
   const formRef = createRef();
-  <%_ entity.fields.filter(field => !field.id).forEach((field, index) => { _%>
+  <%_ fields.filter(field => !field.id).forEach((field, index) => { _%>
   const <%= field.fieldName %>Ref = createRef();
     <%_ if (field.fieldType === 'byte[]' && field.fieldTypeBlobContent !== 'text') { _%>
   const <%= field.fieldName %>ContentTypeRef = createRef();
     <%_ } _%>
   <%_ }) _%>
-  <%_ entity.relationships.filter(relation => relation.ownerSide).forEach((relation, index) => { _%>
+  <%_ relationships.filter(relation => relation.ownerSide).forEach((relation, index) => { _%>
     <%_ if (relation.relationshipType === 'many-to-many') { _%>
   const <%= relation.relationshipNamePlural %>Ref = createRef();
     <%_ } else { _%>
@@ -160,24 +160,24 @@ const onSubmit = (data) => update<%= entity.entityNameCapitalized %>(formValueTo
     <View style={styles.container}>
       <KeyboardAwareScrollView
         enableResetScrollToCoords={false}
-        testID="<%= entity.entityInstance %>EditScrollView"
+        testID="<%= entityInstance %>EditScrollView"
         keyboardShouldPersistTaps="handled"
         keyboardDismissMode="on-drag"
         contentContainerStyle={styles.paddedScrollView}>
         {!!error && <Text style={styles.errorText}>{error}</Text>}
         {formValue && (
-          <Form initialValues={formValue} <%_ if (entity.validation) { _%>validationSchema={validationSchema} <%_ } _%>onSubmit={onSubmit} ref={formRef}>
-          <%_ entity.fields.filter(field => !field.id).forEach((field, index) => { _%>
+          <Form initialValues={formValue} <%_ if (validation) { _%>validationSchema={validationSchema} <%_ } _%>onSubmit={onSubmit} ref={formRef}>
+          <%_ fields.filter(field => !field.id).forEach((field, index) => { _%>
           <%_
             let nextField = null;
-            if (index !== entity.fields.filter(field => !field.id).length - 1) {
-              nextField = entity.fields.filter(field => !field.id)[index + 1];
+            if (index !== fields.filter(field => !field.id).length - 1) {
+              nextField = fields.filter(field => !field.id)[index + 1];
             }
-            const formField = getEntityFormField(field, nextField, entity.relationships.filter(relation => relation.ownerSide).length);
+            const formField = getEntityFormField(field, nextField, relationships.filter(relation => relation.ownerSide).length);
           _%>
                 <%- formField %>
           <%_ }) _%>
-            <%_ entity.relationships.filter(relation => relation.ownerSide).forEach((relation, index) => { _%>
+            <%_ relationships.filter(relation => relation.ownerSide).forEach((relation, index) => { _%>
               <%_ const formField = getRelationshipFormField(relation); _%>
               <%- formField %>
             <%_ }) _%>
@@ -197,14 +197,14 @@ const entityToFormValue = (value) => {
   }
   return {
     id: value.id ?? null,
-    <%_ entity.fields.filter(field => !field.id).forEach((field, index) => { _%>
+    <%_ fields.filter(field => !field.id).forEach((field, index) => { _%>
     <%= field.fieldName %>: value.<%= field.fieldName %> ?? null,
       <%_  if (field.fieldType === 'byte[]' && field.fieldTypeBlobContent !== 'text') { _%>
     <%= field.fieldName %>ContentType: value.<%= field.fieldName %>ContentType ?? null,
       <%_ } _%>
     <%_ }) _%>
-    <%_ entity.relationships.filter(relation => relation.ownerSide).forEach((relation, index) => { _%>
-    <%_ if (entity.dto === 'no' || !useOldDTOCode) { _%>
+    <%_ relationships.filter(relation => relation.ownerSide).forEach((relation, index) => { _%>
+    <%_ if (dto === 'no' || !useOldDTOCode) { _%>
       <%_ if (relation.relationshipType === 'many-to-many') { _%>
     <%= relation.relationshipNamePlural %>: value.<%= relation.relationshipNamePlural %>?.map((i) => i.id),
       <%_ } else { _%>
@@ -223,7 +223,7 @@ const entityToFormValue = (value) => {
 const formValueToEntity = (value) => {
   const entity = {
     id: value.id ?? null,
-    <%_ entity.fields.filter(field => !field.id).forEach((field, index) => { _%>
+    <%_ fields.filter(field => !field.id).forEach((field, index) => { _%>
       <%_ if (field.fieldType === 'Boolean') { _%>
     <%= field.fieldName %>: value.<%= field.fieldName %> === null ? false : Boolean(value.<%= field.fieldName %>),
       <%_ } else { _%>
@@ -233,7 +233,7 @@ const formValueToEntity = (value) => {
     <%= field.fieldName %>ContentType: value.<%= field.fieldName %>ContentType ?? null,
       <%_ } _%>
     <%_ }) _%>
-    <%_ entity.relationships.filter(relation => relation.ownerSide).forEach((relation, index) => { _%>
+    <%_ relationships.filter(relation => relation.ownerSide).forEach((relation, index) => { _%>
     <%_  if (useOldDTOCode) { _%>
       <%_ if (relation.relationshipType === 'many-to-many') { _%>
     <%= relation.relationshipNamePlural %>: value.<%= relation.relationshipNamePlural %>.map((i) => ({ id: i })),
@@ -243,8 +243,8 @@ const formValueToEntity = (value) => {
     <%_ } _%>
   <%_ }) _%>
   }
-  <%_ entity.relationships.filter(relation => relation.ownerSide).forEach((relation, index) => { _%>
-    <%_ if (entity.dto === 'no' || !useOldDTOCode) { _%>
+  <%_ relationships.filter(relation => relation.ownerSide).forEach((relation, index) => { _%>
+    <%_ if (dto === 'no' || !useOldDTOCode) { _%>
       <%_ if (relation.relationshipType === 'many-to-many') { _%>
   entity.<%= relation.relationshipNamePlural %> = value.<%= relation.relationshipNamePlural %>.map((id) => ({ id }));
       <%_ } else { _%>
@@ -261,25 +261,25 @@ const mapStateToProps = (state) => {
     <%_ uniqueOwnerSideRelationships.forEach((relation) => { _%>
     <%= relation.otherEntityName %>List: state.<%= relation.otherEntityNamePlural %>.<%= relation.otherEntityName %>List ?? [],
     <%_ }) _%>
-    <%= entity.entityInstance %>: state.<%= entity.entityInstancePlural %>.<%= entity.entityInstance %>,
-    fetching: state.<%= entity.entityInstancePlural %>.fetchingOne,
-    updating: state.<%= entity.entityInstancePlural %>.updating,
-    updateSuccess: state.<%= entity.entityInstancePlural %>.updateSuccess,
-    errorUpdating: state.<%= entity.entityInstancePlural %>.errorUpdating
+    <%= entityInstance %>: state.<%= entityInstancePlural %>.<%= entityInstance %>,
+    fetching: state.<%= entityInstancePlural %>.fetchingOne,
+    updating: state.<%= entityInstancePlural %>.updating,
+    updateSuccess: state.<%= entityInstancePlural %>.updateSuccess,
+    errorUpdating: state.<%= entityInstancePlural %>.errorUpdating
   }
 }
 
 const mapDispatchToProps = (dispatch) => {
   return {
     <%_ /* differentRelationships.filter(relation => relation.ownerSide).filter(relation => relation.otherEntityName !== camelCaseName).forEach((relation) => { */ _%>
-    <%_ uniqueOwnerSideRelationships.filter(relation => relation.otherEntityName !== entity.entityInstance).forEach((relation) => { _%>
+    <%_ uniqueOwnerSideRelationships.filter(relation => relation.otherEntityName !== entityInstance).forEach((relation) => { _%>
     getAll<%= relation.otherEntityNameCapitalizedPlural %>: (options) => dispatch(<%= relation.otherEntityNameCapitalized %>Actions.<%= relation.otherEntityName %>AllRequest(options)),
     <%_ }) _%>
-    get<%= entity.entityNameCapitalized %>: (id) => dispatch(<%= entity.entityNameCapitalized %>Actions.<%= entity.entityInstance %>Request(id)),
-    getAll<%= entity.entityNamePlural %>: (options) => dispatch(<%= entity.entityNameCapitalized %>Actions.<%= entity.entityInstance %>AllRequest(options)),
-    update<%= entity.entityNameCapitalized %>: (<%= entity.entityInstance %>) => dispatch(<%= entity.entityNameCapitalized %>Actions.<%= entity.entityInstance %>UpdateRequest(<%= entity.entityInstance %>)),
-    reset: () => dispatch(<%= entity.entityNameCapitalized %>Actions.<%= entity.entityInstance %>Reset()),
+    get<%= entityNameCapitalized %>: (id) => dispatch(<%= entityNameCapitalized %>Actions.<%= entityInstance %>Request(id)),
+    getAll<%= entityNamePlural %>: (options) => dispatch(<%= entityNameCapitalized %>Actions.<%= entityInstance %>AllRequest(options)),
+    update<%= entityNameCapitalized %>: (<%= entityInstance %>) => dispatch(<%= entityNameCapitalized %>Actions.<%= entityInstance %>UpdateRequest(<%= entityInstance %>)),
+    reset: () => dispatch(<%= entityNameCapitalized %>Actions.<%= entityInstance %>Reset()),
   }
 }
 
-export default connect(mapStateToProps, mapDispatchToProps)(<%= entity.entityNameCapitalized %>EditScreen)
+export default connect(mapStateToProps, mapDispatchToProps)(<%= entityNameCapitalized %>EditScreen)
