--- a/generators/react-native/templates/app/modules/entities/fixtures/entity-update.json.ejs
+++ b/generators/react-native/templates/app/modules/entities/fixtures/entity-update.json.ejs
@@ -1,6 +1,6 @@
 {
   "id" : 1,
-  <%_ entity.fields.filter(field => !field.id).forEach(function (field) { _%>
+  <%_ fields.filter(field => !field.id).forEach(function (field) { _%>
     <%_ if (field.fieldType === 'LocalDate' || field.fieldType === 'ZonedDateTime' || field.fieldType === 'Instant') { _%>
   <%= field.fieldName %>: null,
     <%_ } _%>
